# AIE6-DeployPythonicRAG

./: Dockerfile  Dockerfile.space  README.md  nginx.conf  pyproject.toml
backend/: requirements.txt
backend/aimakerspace/: text_utils.py
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
